--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,6 @@
     <description>Приложение для работы с монетами</description>
 
     <modules>
-        <module>coins-web</module>
-        <module>coins-main</module>
         <module>coins-bot</module>
         <module>coins-web</module>
     </modules>
@@ -38,7 +36,6 @@
         <spring-jdbc.version>4.3.10.RELEASE</spring-jdbc.version>
         <spring.version>4.0.2.RELEASE</spring.version>
         <postgresql.version>9.1-901.jdbc4</postgresql.version>
-        <spring-context.version>4.2.3.RELEASE</spring-context.version>
         <gagawa.version>1.0.1</gagawa.version>
         <json.version>20160810</json.version>
         <junit.version>4.12</junit.version>
@@ -50,14 +47,10 @@
         <spring-jdbc.version>4.3.10.RELEASE</spring-jdbc.version>
         <telegram.version>3.4</telegram.version>
         <apidaemon.version>1.0-SNAPSHOT</apidaemon.version>
+        <gson.version>2.8.0</gson.version>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
 
         <dependency>
             <groupId>commons-dbcp</groupId>
@@ -82,6 +75,11 @@
             <version>${json.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
+        </dependency>
 
     </dependencies>
 
