[nf] bot module init & log4j add

--- a/coins-bot/pom.xml
+++ b/coins-bot/pom.xml
@@ -39,6 +39,11 @@
             <artifactId>coins-maker</artifactId>
             <version>${apidaemon.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
 
 
     </dependencies>
