--- a/pom.xml
+++ b/pom.xml
@@ -48,10 +48,15 @@
         <telegram.version>3.4</telegram.version>
         <apidaemon.version>1.0-SNAPSHOT</apidaemon.version>
         <gson.version>2.8.0</gson.version>
+        <log4j.version>1.2.17</log4j.version>
     </properties>
 
     <dependencies>
-
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
         <dependency>
             <groupId>commons-dbcp</groupId>
             <artifactId>commons-dbcp</artifactId>
