--- a/coins-web/src/main/resources/application.properties
+++ b/coins-web/src/main/resources/application.properties
@@ -1,9 +1,14 @@
 ########################Database connection properties######################
 app.db.worker.driver=org.postgresql.Driver
-app.db.worker.url=jdbc:postgresql://localhost:9153/cat
+app.db.worker.url=jdbc:postgresql://localhost:5432/cat
 #app.db.worker.url=jdbc:postgresql://localhost:5432/cat
 app.db.worker.login=admin
 app.db.worker.password=123
+
+########################Hibernate properties######################
+hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+hibernate.show_sql=true
+hibernate.connection.charSet=UTF-8
 
 #########################Wex properties##################################
 wex.api.key=ee987526a24ba107824c
