[cf] исправил порт для подключения к БД

--- a/coins-web/src/main/resources/application.properties
+++ b/coins-web/src/main/resources/application.properties
@@ -1,14 +1,15 @@
 ########################Database connection properties######################
 app.db.worker.driver=org.postgresql.Driver
-app.db.worker.url=jdbc:postgresql://localhost:5432/cat
+app.db.worker.url=jdbc:postgresql://localhost:7777/cat
 #app.db.worker.url=jdbc:postgresql://localhost:5432/cat
 app.db.worker.login=admin
 app.db.worker.password=123
 
 ########################Hibernate properties######################
-hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
-hibernate.show_sql=true
+hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect"
 hibernate.connection.charSet=UTF-8
+hibernate.format_sql=true
+hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
 
 #########################Wex properties##################################
 wex.api.key=ee987526a24ba107824c
