--- a/coins-web/pom.xml
+++ b/coins-web/pom.xml
@@ -24,17 +24,47 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
+    <!--<build>-->
+        <!--<plugins>-->
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-compiler-plugin</artifactId>-->
+                <!--<configuration>-->
+                    <!--<source>1.8</source>-->
+                    <!--<target>1.8</target>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
+        <!--</plugins>-->
+    <!--</build>-->
     <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-        </plugins>
+    <plugins>
+    <plugin>
+    <artifactId>maven-assembly-plugin</artifactId>
+    <version>3.0.0</version>
+    <configuration>
+    <descriptorRefs>
+    <descriptorRef>jar-with-dependencies</descriptorRef>
+    </descriptorRefs>
+    </configuration>
+    <executions>
+    <execution>
+    <id>make-assembly</id>
+    <phase>package</phase>
+    <goals>
+    <goal>single</goal>
+    </goals>
+    </execution>
+    </executions>
+    </plugin>
+    <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <configuration>
+    <source>1.8</source>
+    <target>1.8</target>
+    </configuration>
+    </plugin>
+    </plugins>
     </build>
 
     <dependencies>
@@ -87,11 +117,28 @@
             <artifactId>spring-orm</artifactId>
             <version>${spring.version}</version>
         </dependency>
+
+
         <dependency>
-            <groupId>ru.leon4uk.coins.bot</groupId>
-            <artifactId>coins-bot</artifactId>
-            <version>1.0-SNAPSHOT</version>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>${jackson.version}</version>
         </dependency>
+        <!--<dependency>-->
+        <!--<groupId>org.telegram</groupId>-->
+        <!--<artifactId>telegrambots</artifactId>-->
+        <!--<version>${telegram.version}</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>com.fasterxml.jackson.core</groupId>-->
+        <!--<artifactId>jackson-core</artifactId>-->
+        <!--<version>${jackson.version}</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>com.fasterxml.jackson.jaxrs</groupId>-->
+        <!--<artifactId>jackson-jaxrs-json-provider</artifactId>-->
+        <!--<version>${jackson.version}</version>-->
+        <!--</dependency>-->
     </dependencies>
 
 </project>
