[cf] изменил работу с библиотекой

--- a/coins-bot/pom.xml
+++ b/coins-bot/pom.xml
@@ -20,6 +20,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
@@ -73,6 +74,12 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>ru.leon4uk.coins</groupId>
+            <artifactId>coins-maker</artifactId>
+            <version>${apidaemon.version}</version>
+            <scope>provided</scope>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>com.fasterxml.jackson.jaxrs</groupId>-->
             <!--<artifactId>jackson-jaxrs-json-provider</artifactId>-->
