--- a/coins-bot/pom.xml
+++ b/coins-bot/pom.xml
@@ -87,7 +87,12 @@
         <!--</dependency>-->
 
 
-
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots</artifactId>
+            <version>${telegram.version}</version>
+            <scope>provided</scope>
+        </dependency>
 
 
         <!--<dependency>-->
