--- a/coins-web/pom.xml
+++ b/coins-web/pom.xml
@@ -22,17 +22,24 @@
     <groupId>ru.leon4uk.coins.web</groupId>
     <artifactId>coins-web</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>3.7.0</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
             </plugin>
         </plugins>
@@ -120,16 +127,30 @@
         </dependency>
 
         <dependency>
-            <groupId>ru.leon4uk.coins.bot</groupId>
-            <artifactId>coins-bot</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
         <version>${jackson.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>ru.leon4uk.coins</groupId>
+            <artifactId>coins-maker</artifactId>
+            <version>${apidaemon.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots</artifactId>
+            <version>${telegram.version}</version>
+            <!--<scope>provided</scope>-->
+        </dependency>
+
+
+        <!--<dependency>-->
+            <!--<groupId>org.telegram</groupId>-->
+            <!--<artifactId>telegrambots-meta</artifactId>-->
+            <!--<version>${telegram.version}</version>-->
+        <!--</dependency>-->
 
         <!--<dependency>-->
         <!--<groupId>com.fasterxml.jackson.core</groupId>-->
