--- a/pom.xml
+++ b/pom.xml
@@ -23,15 +23,12 @@
     <description>Приложение для работы с монетами</description>
 
     <modules>
-        <module>coins-bot</module>
         <module>coins-web</module>
-        <module>main</module>
     </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <guice.version>4.1.0</guice.version>
         <rs-api.version>2.1</rs-api.version>
         <commons-dbcp.version>1.4</commons-dbcp.version>
         <spring-jdbc.version>4.3.10.RELEASE</spring-jdbc.version>
@@ -39,22 +36,30 @@
         <persistence.version>1.0</persistence.version>
         <postgresql.version>9.1-901.jdbc4</postgresql.version>
         <gagawa.version>1.0.1</gagawa.version>
+        <guice.version>4.1.0</guice.version>
         <json.version>20160810</json.version>
         <junit.version>4.12</junit.version>
         <javax.version>3.1.0</javax.version>
         <jackson.version>2.4.6</jackson.version>
         <spring.version>4.0.2.RELEASE</spring.version>
         <spring-jdbc.version>4.3.10.RELEASE</spring-jdbc.version>
-        <postgresql.version>9.1-901.jdbc4</postgresql.version>
         <commons-dbcp.version>1.4</commons-dbcp.version>
         <spring-jdbc.version>4.3.10.RELEASE</spring-jdbc.version>
-        <telegram.version>3.6</telegram.version>
-        <apidaemon.version>1.1-SNAPSHOT</apidaemon.version>
+        <telegram.version>3.5</telegram.version>
+        <apache.httpclient.version>4.5.4</apache.httpclient.version>
+        <apidaemon.version>1.3-SNAPSHOT</apidaemon.version>
         <gson.version>2.8.0</gson.version>
         <log4j.version>1.2.17</log4j.version>
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${apache.httpclient.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
@@ -113,11 +118,7 @@
             <version>${persistence.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.telegram</groupId>
-            <artifactId>telegrambots</artifactId>
-            <version>${telegram.version}</version>
-        </dependency>
+
         <!--<dependency>-->
             <!--<groupId>com.fasterxml.jackson.core</groupId>-->
             <!--<artifactId>jackson-databind</artifactId>-->
