--- a/pom.xml
+++ b/pom.xml
@@ -40,16 +40,17 @@
         <json.version>20160810</json.version>
         <junit.version>4.12</junit.version>
         <javax.version>3.1.0</javax.version>
-        <jackson.version>2.4.6</jackson.version>
+        <jackson.version>2.9.4</jackson.version>
         <spring.version>4.0.2.RELEASE</spring.version>
         <spring-jdbc.version>4.3.10.RELEASE</spring-jdbc.version>
         <commons-dbcp.version>1.4</commons-dbcp.version>
         <spring-jdbc.version>4.3.10.RELEASE</spring-jdbc.version>
-        <telegram.version>3.5</telegram.version>
+        <telegram.version>3.6</telegram.version>
         <apache.httpclient.version>4.5.4</apache.httpclient.version>
         <apidaemon.version>1.3-SNAPSHOT</apidaemon.version>
         <gson.version>2.8.0</gson.version>
         <log4j.version>1.2.17</log4j.version>
+        <rocket.version>1.0.0</rocket.version>
     </properties>
 
     <dependencies>
@@ -59,6 +60,7 @@
             <artifactId>httpclient</artifactId>
             <version>${apache.httpclient.version}</version>
         </dependency>
+
 
         <dependency>
             <groupId>log4j</groupId>
